# RTANN

./: .gitignore  CMakeLists.txt  IPResult.txt  clean.sh  compile.sh  datasets.py  gmon.out  hit_res_ref  hit_res_rt  main.cpp  make_data.ipynb  readme.md  result  test_faiss.py  test_thrust.cu
data/: codebook_toy.txt  plot.py  query_toy.txt
include/: dbg.h  juno.hpp  juno_core.hpp  juno_gpu_kernel.cuh  juno_query.hpp  juno_rt.hpp  rtann.h  utils.hpp
script/: all_query_thres=0.3  all_query_thres=0.45_dyn  bench_gpu_deep1b.py  bench_gpu_sift1b.py  bench_gpu_tti1m.py  cluster_info_ncluster=100  coil.html  datasets.py  faiss_counter.py  get_dataset_stat.py  groundtruth.py  plot.py  plot_codebook_sparsity.py  plot_entry.py  plot_sift1m.py  pq_end_to_end.py  read_deep1B.py  ref.py  ref_end_to_end.py  rt_evaluation.txt  run.sh  sift1m.html  sift1m.js  sift1m_res  test_recall.py  tsne_sift1m.py  tti_cluster.py
script/xgbs/: model_0.model  model_1.model  model_10.model  model_11.model  model_12.model  model_13.model  model_14.model  model_15.model  model_16.model  model_17.model  model_18.model  model_19.model  model_2.model  model_20.model  model_21.model  model_22.model  model_23.model  model_24.model  model_25.model  model_26.model  model_27.model  model_28.model  model_29.model  model_3.model  model_30.model  model_31.model  model_32.model  model_33.model  model_34.model  model_35.model  model_36.model  model_37.model  model_38.model  model_39.model  model_4.model  model_40.model  model_41.model  model_42.model  model_43.model  model_44.model  (+24 more)
src/: juno_gpu_kernel.cu  juno_rt.cu  juno_rt.optixir  rtann.cpp  rtann.cu  rtann.optixir
