cmake_minimum_required(VERSION 3.19)
project(RTANN)
find_package(CUDA REQUIRED)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -O2 -mavx2 -pg -w")
set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_86,code=sm_86;)
set(OptiX_INSTALL_DIR /home/zhliu/workspace/NVIDIA-OptiX-SDK-7.5.0-linux64-x86_64/)
set(OpenBLAS_INSTALL_DIR /home/zhliu/workspace/OpenBLAS/build)

include_directories(${OptiX_INSTALL_DIR}/include)
include_directories(${OptiX_INSTALL_DIR}/SDK)
include_directories(${OptiX_INSTALL_DIR}/SDK/support)
include_directories(${OptiX_INSTALL_DIR}/SDK/build)
include_directories(${OptiX_INSTALL_DIR}/RTANN/include)
include_directories(${OpenBLAS_INSTALL_DIR}/include)
include_directories(/usr/local/cuda/samples/common/inc/)
include_directories(/usr/local/cuda/include/lib64/)
link_directories(/usr/lib /usr/local/lib /usr/local/cuda/lib64)
link_directories(${OpenBLAS_INSTALL_DIR}/lib)

cuda_add_executable(main main.cpp src/juno_gpu_kernel.cu OPTIONS -arch=sm_86)
target_link_libraries(main ${CUDA_cudadevrt_LIBRARY} openblas)